--- a/src/template.html
+++ b/src/template.html
@@ -6,11 +6,11 @@
     <title>Restaurant</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <button>Home</button>
-        <button>Menu</button>
-        <button>About</button>
+    <header class="center">
+      <nav class="center">
+        <button class="btn-home">Home</button>
+        <button class="btn-menu">Menu</button>
+        <button class="btn-about">About Us</button>
       </nav>
     </header>
     <div id="content"></div>
